--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 chrono = { version = "0.4", features = ["serde"] }
 rand = "0.8"
 urlencoding = "2"
+regex = "1"
 
 [dev-dependencies]
 axum-test = "16"
